Fix meetings overlap

--- a/fedocal/static/default/fedocal.css
+++ b/fedocal/static/default/fedocal.css
@@ -173,10 +173,13 @@ td .last_event {
 
 #agenda td {
     min-width: 100px;
-    height: 2em;
     border: 1px solid #e6e6e6;
     background-color: #f9f9f9;
     padding: 0;
+}
+
+#agenda td > .row_height {
+    min-height: 2em;
 }
 
 #agenda td.empty {
